--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <input type="file" name="file">
 
     <button type="submit" class="btn">
-      <span>📲</span>
+      <span></span>
       Submit Order
     </button>
   </form>
