Replace WhatsApp icon with emoji in submit button

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
     <input type="file" name="file">
 
     <button type="submit" class="btn">
-     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/<span>📲</span>
+">
       Submit Order
     </button>
   </form>
