Update order form to remove mailto action
Removed mailto action from order form and added alert for order confirmation.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     Airtel Money Pay: <b>0700 358071</b>
   </div>
 
-  <form id="orderForm" action="mailto:sebajumoinvestiments@gmail.com" method="post" enctype="multipart/form-data">
+  <form id="orderForm">
 
     <label>Customer Name</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" required>
@@ -151,7 +151,7 @@
     <input type="file" name="file">
 
     <button type="submit" class="btn">
-     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/<span>📲</span>
+     <span>📲</span>
 ">
       Submit Order
     </button>
@@ -177,7 +177,7 @@
       + "Details: " + encodeURIComponent(details) + "%0A"
       + "Payment: MTN 0773794953 / Airtel 0700358071";
 
-    window.open("https://wa.me/256705117484?text=" + message, "_blank");
+    alert("Order captured. Please contact us on WhatsApp to complete your order.");
   });
 </script>
 
