--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     }
   </style>
 </head>
+  <meta name="google-site-verification" content="8w7Z1CktZ0ZQTWLDiulntG60SmSINpz31JjydLp4yJs" />
 <body>
 
 <div class="container">
